{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "1c77756f-c908-4afa-a10b-53ae12734ab6",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "311b0a3d-96cf-4e5e-9dce-6ac717b1a149",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "8f32061b-1e47-49e7-b6f1-5faf38352dee",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Contact",
                    "type": "PassThrough",
                    "id": "00712527-6425-4e99-95e3-9b4efdfefb88",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8775973c-2d92-41d7-8b11-5ef0be2ccb62",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19f1aeb9-42eb-4e47-ab55-aed0dd85a3bc",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3392a383-8905-40b3-ba85-30c31def14cb",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Contact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}